Configuración de Firebase y mejoras en la estructura de la aplicación. Se añadieron dependencias de Firebase para autenticación y base de datos, se configuró el archivo app.json para incluir identificadores de paquete y archivos de servicios de Google, y se implementó un tema personalizado en la interfaz de usuario con navegación por pestañas.

--- a/app.json
+++ b/app.json
@@ -12,16 +12,20 @@
       "supportsTablet": true,
       "infoPlist": {
         "NSCameraUsageDescription": "Necesitamos acceso a la cámara para escanear códigos QR"
-      }
+      },
+      "bundleIdentifier": "com.ordinem.app",
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
+      "package": "com.ordinem.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "permissions": [
         "CAMERA"
-      ]
+      ],
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "bundler": "metro",
@@ -43,6 +47,17 @@
         "expo-camera",
         {
           "cameraPermission": "Ordinem necesita acceso a la cámara para escanear códigos QR."
+        }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "usesCleartextTraffic": true
+          },
+          "ios": {
+            "useFrameworks": "static"
+          }
         }
       ]
     ],
