--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/stack": "^7.2.10",
     "crypto-js": "^4.2.0",
     "expo": "~52.0.46",
+    "expo-auth-session": "^6.0.3",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "^0.13.2",
@@ -40,7 +41,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
+    "expo-web-browser": "^14.0.2",
     "firebase": "^11.6.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
