--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "^0.13.2",
-    "expo-camera": "^16.0.18",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "^5.0.20",
     "expo-font": "~13.0.4",
