Trying google sign in

--- a/app.json
+++ b/app.json
@@ -59,6 +59,9 @@
             "useFrameworks": "static"
           }
         }
+      ],
+      [
+        "@react-native-google-signin/google-signin"
       ]
     ],
     "experiments": {
