--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -20,6 +20,7 @@
     "@react-native-firebase/app": "^21.14.0",
     "@react-native-firebase/auth": "^21.14.0",
     "@react-native-firebase/database": "^21.14.0",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
@@ -30,7 +31,7 @@
     "expo-blur": "~14.0.3",
     "expo-build-properties": "^0.13.2",
     "expo-camera": "~16.0.18",
-    "expo-constants": "~17.0.8",
+    "expo-constants": "^17.0.8",
     "expo-dev-client": "^5.0.20",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
