Fixing google sign in error

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -56,3 +56,9 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 expo.useLegacyPackaging=false
 
 android.extraMavenRepos=[]
+
+# Set Java 17 as the Java version
+org.gradle.java.home=/usr/lib/jvm/java-17-openjdk-amd64
+
+# Enable AndroidX and Jetifier
+android.enableJetifier=true
