Actualización de la configuración del proyecto Android: se añadió un nuevo comando de limpieza en package.json, se eliminó la dependencia de Google Services, se desactivó la nueva arquitectura de React Native, se ajustaron los permisos en el AndroidManifest.xml y se eliminaron archivos innecesarios, incluyendo MainActivity y MainApplication. Además, se realizaron cambios en los estilos y recursos de la aplicación.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,13 +86,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.ordinem.app'
+    namespace "com.ordinem"
     defaultConfig {
-        applicationId 'com.ordinem.app'
+        applicationId "com.ordinem"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0"
     }
     signingConfigs {
         debug {
@@ -174,5 +174,3 @@ dependencies {
         implementation jscFlavor
     }
 }
-
-apply plugin: 'com.google.gms.google-services'
