Development build working

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,4 +173,20 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    
+    // Excluir bibliotecas de soporte antiguas para resolver conflictos
+    configurations.all {
+        resolutionStrategy {
+            force "androidx.core:core:1.13.1"
+            exclude group: "com.android.support", module: "support-compat"
+            exclude group: "com.android.support", module: "support-v4"
+            exclude group: "com.android.support", module: "support-annotations"
+            exclude group: "com.android.support", module: "support-core-utils"
+        }
+    }
+    
+    // Específicamente para react-native-push-notification
+    implementation(project(':react-native-push-notification')) {
+        exclude group: 'com.android.support', module: 'support-compat'
+    }
 }
