--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,20 +10,20 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+org.gradle.parallel=true
 
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 
-# Enable AAPT2 PNG crunching
-android.enablePngCrunchInReleaseBuilds=true
+# Automatically convert third-party libraries to use AndroidX
+android.enableJetifier=true
 
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
@@ -49,8 +49,11 @@ expo.webp.enabled=true
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
 
+# Disable legacy packaging in jniLibs - depends on https://github.com/expo/expo/pull/26079
+expo.useLegacyPackaging=false
+
+# Forcefully exclude the following transitive dependencies (resolves conflicts)
+android.jetifier.ignorelist=android-support-,support-,bcprov-jdk15on,bcpkix-jdk15on
+
 # Enable network inspector
 EX_DEV_CLIENT_NETWORK_INSPECTOR=true
-
-# Use legacy packaging to compress native libraries in the resulting APK.
-expo.useLegacyPackaging=false
