--- a/eas.json
+++ b/eas.json
@@ -1,16 +1,26 @@
 {
     "cli": {
-        "version": ">= 5.9.1"
+        "version": ">= 7.0.0"
     },
     "build": {
         "development": {
             "developmentClient": true,
-            "distribution": "internal"
+            "distribution": "internal",
+            "android": {
+                "gradleCommand": ":app:assembleDebug"
+            }
         },
         "preview": {
-            "distribution": "internal"
+            "distribution": "internal",
+            "android": {
+                "buildType": "apk"
+            }
         },
-        "production": {}
+        "production": {
+            "android": {
+                "buildType": "apk"
+            }
+        }
     },
     "submit": {
         "production": {}
