--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "clean": "expo prebuild --clean"
+    "clean": "expo prebuild --clean",
+    "build:android": "eas build --platform android --profile production",
+    "build:android-local": "eas build --platform android --profile production --local"
   },
   "jest": {
     "preset": "jest-expo"
@@ -49,8 +51,6 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-push-notification": "^8.1.1",
-    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -64,6 +64,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "eas-cli": "^7.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
