--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
     "cli": {
-        "version": ">= 7.0.0"
+        "version": "^16.0.0",
+        "appVersionSource": "remote"
     },
     "build": {
         "development": {
@@ -18,7 +19,8 @@
         },
         "production": {
             "android": {
-                "buildType": "apk"
+                "buildType": "apk",
+                "autoIncrement": true
             }
         }
     },
