--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.2.10",
+    "@types/crypto-js": "^4.2.2",
     "crypto-js": "^4.2.0",
     "expo": "~52.0.46",
     "expo-auth-session": "^6.0.3",
