--- a/.github/workflows/expo-build.yml
+++ b/.github/workflows/expo-build.yml
@@ -12,19 +12,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 🏗 Setup repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: 🏗 Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18.x
-          cache: "npm"
+          cache: 'npm'
 
       - name: 🏗 Setup Java for Android builds
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          distribution: "zulu"
-          java-version: "17"
+          distribution: 'zulu'
+          java-version: '17'
 
       - name: 📦 Install dependencies
         run: npm install
@@ -71,14 +71,14 @@ jobs:
           echo "AAB encontrado en: $AAB_PATH"
 
       - name: 📦 Upload APK artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: android-apk
           path: ${{ env.APK_PATH }}
           if-no-files-found: error
 
       - name: 📦 Upload AAB artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: android-aab
           path: ${{ env.AAB_PATH }}
