--- a/.github/workflows/expo-build.yml
+++ b/.github/workflows/expo-build.yml
@@ -18,13 +18,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18.x
-          cache: 'npm'
+          cache: "npm"
 
       - name: 🏗 Setup Java for Android builds
         uses: actions/setup-java@v4
         with:
-          distribution: 'zulu'
-          java-version: '17'
+          distribution: "zulu"
+          java-version: "17"
 
       - name: 📦 Install dependencies
         run: npm install
@@ -57,6 +57,8 @@ jobs:
           # Modificamos temporalmente el eas.json para generar el AAB
           jq '.build.production.android.buildType = "app-bundle"' eas.json > temp.json && mv temp.json eas.json
           cat eas.json
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
 
       - name: 🚀 Build AAB locally
         run: npx eas build --platform android --profile production --local
