--- a/.github/workflows/expo-build.yml
+++ b/.github/workflows/expo-build.yml
@@ -82,7 +82,7 @@ jobs:
       - name: 📂 Locate APK build output
         id: find-apk
         run: |
-          APK_PATH=$(find ./build-output -name "*.apk" | head -n 1)
+          APK_PATH=$(find ./build -name "*.apk" | head -n 1)
           echo "APK_PATH=$APK_PATH" >> $GITHUB_ENV
           echo "APK encontrado en: $APK_PATH"
 
@@ -173,7 +173,7 @@ jobs:
       - name: 📂 Locate AAB build output
         id: find-aab
         run: |
-          AAB_PATH=$(find ./build-output -name "*.aab" | head -n 1)
+          AAB_PATH=$(find ./build -name "*.aab" | head -n 1)
           echo "AAB_PATH=$AAB_PATH" >> $GITHUB_ENV
           echo "AAB encontrado en: $AAB_PATH"
 
