feat: Añadir autoIncrement a la configuración de distribución de iOS en eas.json

--- a/eas.json
+++ b/eas.json
@@ -23,7 +23,8 @@
                 "autoIncrement": true
             },
             "ios": {
-                "distribution": "store"
+                "distribution": "store",
+                "autoIncrement": true
             }
         }
     },
