feat: Eliminar autoIncrement de la configuración de producción en eas.json

--- a/eas.json
+++ b/eas.json
@@ -19,12 +19,10 @@
         },
         "production": {
             "android": {
-                "buildType": "apk",
-                "autoIncrement": true
+                "buildType": "apk"
             },
             "ios": {
-                "distribution": "store",
-                "autoIncrement": true
+                "distribution": "store"
             }
         }
     },
