feat: Actualizar configuración de Firebase; simplificar inicialización de autenticación y añadir dependencias de Firebase en package.json

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ expo-env.d.ts
 node_modules
 node_modules
 /.expo
+/dist
 .expo/devices.json
 
 # Añadir carpetas nativas para usar correctamente Prebuild/CNG
