feat: actualizar versión a 1.0.2 en package.json

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -21,7 +21,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
   }
 }
 
-rootProject.name = 'ordinem'
+rootProject.name = 'Ordinem'
 
 dependencyResolutionManagement {
   versionCatalogs {
