--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ordinem",
   "main": "expo-router/entry",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "homepage": "https://oriolgds.github.io/ordinem",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
+    "prebuild": "expo prebuild",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
