--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "expo-auth-session": "^6.0.3",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.3",
-    "expo-build-properties": "^0.13.2",
+    "expo-build-properties": "~0.13.3",
     "expo-camera": "~16.0.18",
     "expo-constants": "^17.0.8",
     "expo-dev-client": "^5.0.20",
@@ -49,7 +49,7 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-notifications": "^0.29.14",
-    "expo-router": "~4.0.20",
+    "expo-router": "~4.0.21",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
