--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "expo prebuild --clean",
     "build:android": "eas build --platform android --profile production",
     "build:android-local": "eas build --platform android --profile production --local",
+    "build:aab": "eas build --platform android --profile production --output aab",
+    "build:aab-local": "eas build --platform android --profile production --output aab --local",
     "workflow:run": "npx eas-cli workflow:run",
     "workflow:android": "npx eas-cli workflow:run .eas/workflows/android-build.yml",
     "predeploy": "expo export",
